--- a/WPR381_Assighnment1_vanStaden_Tiaan/Twitter/.env
+++ b/WPR381_Assighnment1_vanStaden_Tiaan/Twitter/.env
@@ -1,2 +1,2 @@
-BEARER_TOKEN="AAAAAAAAAAAAAAAAAAAAAGXKcgEAAAAAey23q8y36XuU1TlzHovOZQK%2FxgA%3DW8CRSNUBSBbOW8tC5yplD4hb6cHfjX7aa5Qf83uMCLIZBFW2iw"
+BEARER_TOKEN="enter own bearer token"
 PORT=8000
